website/versioned_docs/version-2.15.x/reference/global-options.mdx
---
title: Global options
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options to control the overall behavior of Pants.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[GLOBAL]`</span>

<span className={styles.options}>

## Basic options

### `level`

<Option
  cli_repr={`-l=<LogLevel>, --level=<LogLevel>`}
  env_repr="PANTS_LEVEL"
  one_of="trace, debug, info, warn, error"
  default_repr={`info`}
>
  Set the logging level.
</Option>

### `spec_files`

<Option
  cli_repr={`--spec-files="['<str>', '<str>', ...]"`}
  env_repr="PANTS_SPEC_FILES"
  default_repr={`[]`}
>
  Read additional specs (target addresses, files, and/or globs), one per line,
  from these files.
</Option>

### `pantsd`

<Option
  cli_repr={`--[no-]pantsd`}
  env_repr="PANTS_PANTSD"
  default_repr={`True`}
>
  Enables use of the Pants daemon (pantsd). pantsd can significantly improve
  runtime performance by lowering per-run startup cost, and by memoizing
  filesystem operations and rule execution.
</Option>

### `concurrent`

<Option
  cli_repr={`--[no-]concurrent`}
  env_repr="PANTS_CONCURRENT"
  default_repr={`False`}
>
  Enable concurrent runs of Pants. Without this enabled, Pants will start up all
  concurrent invocations (e.g. in other terminals) without pantsd. Enabling this
  option requires parallel Pants invocations to block on the first.
</Option>

### `local_cache`

<Option
  cli_repr={`--[no-]local-cache`}
  env_repr="PANTS_LOCAL_CACHE"
  default_repr={`True`}
>
  Whether to cache process executions in a local cache persisted to disk at
  `--local-store-dir`.
</Option>

### `keep_sandboxes`

<Option
  cli_repr={`--keep-sandboxes=<KeepSandboxes>`}
  env_repr='PANTS_KEEP_SANDBOXES'
  one_of='always, on_failure, never'
  default_repr={`never`}
>
Controls whether Pants will clean up local directories used as chroots for running processes.

Pants will log their location so that you can inspect the chroot, and run the `__run.sh` script to recreate the process using the same argv and environment variables used by Pants. This option is useful for debugging.

</Option>

### `session_end_tasks_timeout`

<Option
  cli_repr={`--session-end-tasks-timeout=<float>`}
  env_repr="PANTS_SESSION_END_TASKS_TIMEOUT"
  default_repr={`3.0`}
>
  The time in seconds to wait for still-running &quot;session end&quot; tasks to
  complete before finishing completion of a Pants invocation. &quot;Session
  end&quot; tasks include, for example, writing data that was generated during
  the applicable Pants invocation to a configured remote cache.
</Option>

### `remote_execution`

<Option
  cli_repr={`--[no-]remote-execution`}
  env_repr='PANTS_REMOTE_EXECUTION'
  default_repr={`False`}
>
Enables remote workers for increased parallelism. (Alpha)

Alternatively, you can use `[GLOBAL].remote_cache_read` and `[GLOBAL].remote_cache_write` to still run everything locally, but to use a remote cache.

</Option>

### `remote_cache_read`

<Option
  cli_repr={`--[no-]remote-cache-read`}
  env_repr='PANTS_REMOTE_CACHE_READ'
  default_repr={`False`}
>
Whether to enable reading from a remote cache.

This cannot be used at the same time as `[GLOBAL].remote_execution`.

</Option>

### `remote_cache_write`

<Option
  cli_repr={`--[no-]remote-cache-write`}
  env_repr='PANTS_REMOTE_CACHE_WRITE'
  default_repr={`False`}
>
Whether to enable writing results to a remote cache.

This cannot be used at the same time as `[GLOBAL].remote_execution`.

</Option>

### `colors`

<Option
  cli_repr={`--[no-]colors`}
  env_repr='PANTS_COLORS'
  default_repr={`False`}
>
Whether Pants should use colors in output or not. This may also impact whether some tools Pants runs use color.

When unset, this value defaults based on whether the output destination supports color.

</Option>

### `dynamic_ui`

<Option
  cli_repr={`--[no-]dynamic-ui`}
  env_repr="PANTS_DYNAMIC_UI"
  default_repr={`True`}
>
  Display a dynamically-updating console UI as Pants runs. This is true by
  default if Pants detects a TTY and there is no &#x27;CI&#x27; environment
  variable indicating that Pants is running in a continuous integration
  environment.
</Option>

### `dynamic_ui_renderer`

<Option
  cli_repr={`--dynamic-ui-renderer=<DynamicUIRenderer>`}
  env_repr="PANTS_DYNAMIC_UI_RENDERER"
  one_of="indicatif-spinner, experimental-prodash"
  default_repr={`indicatif-spinner`}
>
  If `--dynamic-ui` is enabled, selects the renderer.
</Option>

### `tag`

<Option
  cli_repr={`--tag="[[+-]tag1,tag2,..., [+-]tag1,tag2,..., ...]"`}
  env_repr="PANTS_TAG"
  default_repr={`[]`}
>
  Include only targets with these tags (optional &#x27;+&#x27; prefix) or
  without these tags (&#x27;-&#x27; prefix). See
  https://www.pantsbuild.org/v2.15/docs/advanced-target-selection.
</Option>

### `loop`

<Option cli_repr={`--[no-]loop`} env_repr="PANTS_LOOP" default_repr={`False`}>
  Run goals continuously as file changes are detected.
</Option>

## Advanced options

### `backend_packages`

<Option
  cli_repr={`--backend-packages="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BACKEND_PACKAGES'
  default_repr={`[]`}
>
Register functionality from these backends.

The backend packages must be present on the PYTHONPATH, typically because they are in the Pants core dist, in a plugin dist, or available as sources in the repo.

</Option>

### `plugins`

<Option
  cli_repr={`--plugins="['<str>', '<str>', ...]"`}
  env_repr="PANTS_PLUGINS"
  default_repr={`[]`}
>
  Allow backends to be loaded from these plugins (usually released through
  PyPI). The default backends for each plugin will be loaded automatically.
  Other backends in a plugin can be loaded by listing them in `backend_packages`
  in the `[GLOBAL]` scope.
</Option>

### `plugins_force_resolve`

<Option
  cli_repr={`--[no-]plugins-force-resolve`}
  env_repr="PANTS_PLUGINS_FORCE_RESOLVE"
  default_repr={`False`}
>
  Re-resolve plugins, even if previously resolved.
</Option>

### `show_log_target`

<Option
  cli_repr={`--[no-]show-log-target`}
  env_repr="PANTS_SHOW_LOG_TARGET"
  default_repr={`False`}
>
  Display the target where a log message originates in that log message&#x27;s
  output. This can be helpful when paired with --log-levels-by-target.
</Option>

### `log_levels_by_target`

<Option
  cli_repr={`--log-levels-by-target="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_LOG_LEVELS_BY_TARGET'
  default_repr={`{}`}
>
Set a more specific logging level for one or more logging targets. The names of logging targets are specified in log strings when the --show-log-target option is set. The logging levels are one of: &quot;error&quot;, &quot;warn&quot;, &quot;info&quot;, &quot;debug&quot;, &quot;trace&quot;. All logging targets not specified here use the global log level set with --level. For example, you can set `--log-levels-by-target='{"workunit_store": "info", "pants.engine.rules": "warn"}'`.
</Option>

### `log_show_rust_3rdparty`

<Option
  cli_repr={`--[no-]log-show-rust-3rdparty`}
  env_repr="PANTS_LOG_SHOW_RUST_3RDPARTY"
  default_repr={`False`}
>
  Whether to show/hide logging done by 3rdparty Rust crates used by the Pants
  engine.
</Option>

### `ignore_warnings`

<Option
  cli_repr={`--ignore-warnings="['<str>', '<str>', ...]"`}
  env_repr='PANTS_IGNORE_WARNINGS'
  default_repr={`[]`}
>
Ignore logs and warnings matching these strings.

Normally, Pants will look for literal matches from the start of the log/warning message, but you can prefix the ignore with `$regex$` for Pants to instead treat your string as a regex pattern. For example:

```
ignore_warnings = [
    "DEPRECATED: option 'config' in scope 'flake8' will be removed",
    '$regex$:No files\s*'
]
```

</Option>

### `pants_version`

<Option
  cli_repr={`--pants-version=<str>`}
  env_repr='PANTS_VERSION'
  default_repr={`<pants_version>`}
>
Use this Pants version. Note that Pants only uses this to verify that you are using the requested version, as Pants cannot dynamically change the version it is using once the program is already running.

If you use the `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64` script from https://www.pantsbuild.org/v2.15/docs/installation, however, changing the value in your `pants.toml` will cause the new version to be installed and run automatically.

Run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --version` to check what is being used.

</Option>

### `pants_bin_name`

<Option
  cli_repr={`--pants-bin-name=<str>`}
  env_repr="PANTS_BIN_NAME"
  default_repr={`pants`}
>
  The name of the script or binary used to invoke Pants. Useful when printing
  help messages.
</Option>

### `pants_workdir`

<Option
  cli_repr={`--pants-workdir=<dir>`}
  env_repr="PANTS_WORKDIR"
  default_repr={`<buildroot>/.pants.d`}
>
  Write intermediate logs and output files to this dir.
</Option>

### `pants_physical_workdir_base`

<Option
  cli_repr={`--pants-physical-workdir-base=<dir>`}
  env_repr="PANTS_PHYSICAL_WORKDIR_BASE"
  default_repr={`None`}
>
  When set, a base directory in which to store `--pants-workdir` contents. If
  this option is a set, the workdir will be created as symlink into a
  per-workspace subdirectory.
</Option>

### `pants_distdir`

<Option
  cli_repr={`--pants-distdir=<dir>`}
  env_repr="PANTS_DISTDIR"
  default_repr={`<buildroot>/dist`}
>
  Write end products, such as the results of `pants package`, to this dir.
</Option>

### `pants_subprocessdir`

<Option
  cli_repr={`--pants-subprocessdir=<str>`}
  env_repr="PANTS_SUBPROCESSDIR"
  default_repr={`<buildroot>/.pids`}
>
  The directory to use for tracking subprocess metadata. This should live
  outside of the dir used by `pants_workdir` to allow for tracking subprocesses
  that outlive the workdir data.
</Option>

### `pants_config_files`

<Option
  cli_repr={`--pants-config-files="['<str>', '<str>', ...]"`}
  env_repr="PANTS_CONFIG_FILES"
  default_repr={`["/tmp/tmp.MpwSc5OGVo/pants.toml"]`}
>
  Paths to Pants config files. This may only be set through the environment
  variable `PANTS_CONFIG_FILES` and the command line argument
  `--pants-config-files`; it will be ignored if in a config file like
  `pants.toml`.
</Option>

### `pantsrc`

<Option
  cli_repr={`--[no-]pantsrc`}
  env_repr="PANTS_PANTSRC"
  default_repr={`True`}
>
  Use pantsrc files located at the paths specified in the global option
  `pantsrc_files`.
</Option>

### `pantsrc_files`

<Option
  cli_repr={`--pantsrc-files="[<path>, <path>, ...]"`}
  env_repr="PANTS_PANTSRC_FILES"
  default_repr={`[\n  "/etc/pantsrc",\n  "~/.pants.rc",\n  ".pants.rc"\n]`}
>
  Override config with values from these files, using syntax matching that of
  `--pants-config-files`.
</Option>

### `pythonpath`

<Option
  cli_repr={`--pythonpath="['<str>', '<str>', ...]"`}
  env_repr="PANTS_PYTHONPATH"
  default_repr={`[]`}
>
  Add these directories to PYTHONPATH to search for plugins. This does not
  impact the PYTHONPATH used by Pants when running your Python code.
</Option>

### `verify_config`

<Option
  cli_repr={`--[no-]verify-config`}
  env_repr="PANTS_VERIFY_CONFIG"
  default_repr={`True`}
>
  Verify that all config file values correspond to known options.
</Option>

### `stats_record_option_scopes`

<Option
  cli_repr={`--stats-record-option-scopes="['<str>', '<str>', ...]"`}
  env_repr="PANTS_STATS_RECORD_OPTION_SCOPES"
  default_repr={`["*"]`}
>
  Option scopes to record in stats on run completion. Options may be selected by
  joining the scope and the option with a ^ character, i.e. to get option
  `pantsd` in the GLOBAL scope, you&#x27;d pass `GLOBAL^pantsd`. Add a
  &#x27;*&#x27; to the list to capture all known scopes.
</Option>

### `pants_ignore`

<Option
  cli_repr={`--pants-ignore="['<str>', '<str>', ...]"`}
  env_repr="PANTS_IGNORE"
  default_repr={`[\n  ".*/",\n  "/dist/",\n  "__pycache__"\n]`}
>
  Paths to ignore for all filesystem operations performed by pants (e.g. BUILD
  file scanning, glob matching, etc). Patterns use the gitignore syntax
  (https://git-scm.com/docs/gitignore). The `pants_distdir` and `pants_workdir`
  locations are automatically ignored. `pants_ignore` can be used in tandem with
  `pants_ignore_use_gitignore`; any rules specified here are applied after rules
  specified in a .gitignore file.
</Option>

### `pants_ignore_use_gitignore`

<Option
  cli_repr={`--[no-]pants-ignore-use-gitignore`}
  env_repr="PANTS_IGNORE_USE_GITIGNORE"
  default_repr={`True`}
>
  Make use of a root .gitignore file when determining whether to ignore
  filesystem operations performed by Pants. If used together with
  `--pants-ignore`, any exclude/include patterns specified there apply after
  .gitignore rules.
</Option>

### `logdir`

<Option
  cli_repr={`--logdir=<dir>`}
  env_repr="PANTS_LOGDIR"
  default_repr={`None`}
>
  Write logs to files under this directory.
</Option>

### `pantsd_timeout_when_multiple_invocations`

<Option
  cli_repr={`--pantsd-timeout-when-multiple-invocations=<float>`}
  env_repr="PANTS_PANTSD_TIMEOUT_WHEN_MULTIPLE_INVOCATIONS"
  default_repr={`60.0`}
>
  The maximum amount of time to wait for the invocation to start until raising a
  timeout exception. Because pantsd currently does not support parallel runs,
  any prior running Pants command must be finished for the current one to start.
  To never timeout, use the value -1.
</Option>

### `pantsd_max_memory_usage`

<Option
  cli_repr={`--pantsd-max-memory-usage=<memory_size>`}
  env_repr='PANTS_PANTSD_MAX_MEMORY_USAGE'
  default_repr={`1GiB`}
>
The maximum memory usage of the pantsd process.

When the maximum memory is exceeded, the daemon will restart gracefully, although all previous in-memory caching will be lost. Setting too low means that you may miss out on some caching, whereas setting too high may over-consume resources and may result in the operating system killing Pantsd due to memory overconsumption (e.g. via the OOM killer).

You can suffix with `GiB`, `MiB`, `KiB`, or `B` to indicate the unit, e.g. `2GiB` or `2.12GiB`. A bare number will be in bytes.

There is at most one pantsd process per workspace.

</Option>

### `print_stacktrace`

<Option
  cli_repr={`--[no-]print-stacktrace`}
  env_repr="PANTS_PRINT_STACKTRACE"
  default_repr={`False`}
>
  Print the full exception stack trace for any errors.
</Option>

### `engine_visualize_to`

<Option
  cli_repr={`--engine-visualize-to=<dir_option>`}
  env_repr="PANTS_ENGINE_VISUALIZE_TO"
  default_repr={`None`}
>
  A directory to write execution and rule graphs to as `dot` files. The contents
  of the directory will be overwritten if any filenames collide.
</Option>

### `pantsd_pailgun_port`

<Option
  cli_repr={`--pantsd-pailgun-port=<int>`}
  env_repr="PANTS_PANTSD_PAILGUN_PORT"
  default_repr={`0`}
>
  The port to bind the Pants nailgun server to. Defaults to a random port.
</Option>

### `pantsd_invalidation_globs`

<Option
  cli_repr={`--pantsd-invalidation-globs="['<str>', '<str>', ...]"`}
  env_repr="PANTS_PANTSD_INVALIDATION_GLOBS"
  default_repr={`[]`}
>
  Filesystem events matching any of these globs will trigger a daemon restart.
  Pants&#x27;s own code, plugins, and `--pants-config-files` are inherently
  invalidated.
</Option>

### `rule_threads_core`

<Option
  cli_repr={`--rule-threads-core=<int>`}
  env_repr='PANTS_RULE_THREADS_CORE'
  default_repr={`max(2, #cores/2)`}
>
The number of threads to keep active and ready to execute `@rule` logic (see also: `--rule-threads-max`).

Values less than 2 are not currently supported.

This value is independent of the number of processes that may be spawned in parallel locally (controlled by `--process-execution-local-parallelism`).

</Option>

### `rule_threads_max`

<Option
  cli_repr={`--rule-threads-max=<int>`}
  env_repr="PANTS_RULE_THREADS_MAX"
  default_repr={`None`}
>
  The maximum number of threads to use to execute `@rule` logic. Defaults to a
  small multiple of `--rule-threads-core`.
</Option>

### `local_store_dir`

<Option
  cli_repr={`--local-store-dir=<str>`}
  env_repr='PANTS_LOCAL_STORE_DIR'
  default_repr={`$XDG_CACHE_HOME/pants/lmdb_store`}
>
Directory to use for the local file store, which stores the results of subprocesses run by Pants.

The path may be absolute or relative. If the directory is within the build root, be sure to include it in `--pants-ignore`.

</Option>

### `local_store_shard_count`

<Option
  cli_repr={`--local-store-shard-count=<int>`}
  env_repr='PANTS_LOCAL_STORE_SHARD_COUNT'
  default_repr={`16`}
>
The number of LMDB shards created for the local store. This setting also impacts the maximum size of stored files: see `--local-store-files-max-size-bytes` for more information.

Because LMDB allows only one simultaneous writer per database, the store is split into multiple shards to allow for more concurrent writers. The faster your disks are, the fewer shards you are likely to need for performance.

NB: After changing this value, you will likely want to manually clear the `--local-store-dir` directory to clear the space used by old shard layouts.

</Option>

### `local_store_processes_max_size_bytes`

<Option
  cli_repr={`--local-store-processes-max-size-bytes=<int>`}
  env_repr="PANTS_LOCAL_STORE_PROCESSES_MAX_SIZE_BYTES"
  default_repr={`16000000000`}
>
  The maximum size in bytes of the local store containing process cache entries.
  Stored below `--local-store-dir`.
</Option>

### `local_store_files_max_size_bytes`

<Option
  cli_repr={`--local-store-files-max-size-bytes=<int>`}
  env_repr='PANTS_LOCAL_STORE_FILES_MAX_SIZE_BYTES'
  default_repr={`256000000000`}
>
The maximum size in bytes of the local store containing files. Stored below `--local-store-dir`.

NB: This size value bounds the total size of all files, but (due to sharding of the store on disk) it also bounds the per-file size to (VALUE / `--local-store-shard-count`).

This value doesn&#x27;t reflect space allocated on disk, or RAM allocated (it may be reflected in VIRT but not RSS). However, the default is lower than you might otherwise choose because macOS creates core dumps that include MMAP&#x27;d pages, and setting this too high might cause core dumps to use an unreasonable amount of disk if they are enabled.

</Option>

### `local_store_directories_max_size_bytes`

<Option
  cli_repr={`--local-store-directories-max-size-bytes=<int>`}
  env_repr="PANTS_LOCAL_STORE_DIRECTORIES_MAX_SIZE_BYTES"
  default_repr={`16000000000`}
>
  The maximum size in bytes of the local store containing directories. Stored
  below `--local-store-dir`.
</Option>

### `named_caches_dir`

<Option
  cli_repr={`--named-caches-dir=<str>`}
  env_repr='PANTS_NAMED_CACHES_DIR'
  default_repr={`$XDG_CACHE_HOME/pants/named_caches`}
>
Directory to use for named global caches for tools and processes with trusted, concurrency-safe caches.

The path may be absolute or relative. If the directory is within the build root, be sure to include it in `--pants-ignore`.

</Option>

### `local_execution_root_dir`

<Option
  cli_repr={`--local-execution-root-dir=<str>`}
  env_repr='PANTS_LOCAL_EXECUTION_ROOT_DIR'
  default_repr={`<tmp_dir>`}
>
Directory to use for local process execution sandboxing.

The path may be absolute or relative. If the directory is within the build root, be sure to include it in `--pants-ignore`.

</Option>

### `cache_content_behavior`

<Option
  cli_repr={`--cache-content-behavior=<CacheContentBehavior>`}
  env_repr='PANTS_CACHE_CONTENT_BEHAVIOR'
  one_of='fetch, validate, defer'
  default_repr={`fetch`}
>
Controls how the content of cache entries is handled during process execution.

When using a remote cache, the `fetch` behavior will fetch remote cache content from the remote store before considering the cache lookup a hit, while the `validate` behavior will only validate (for either a local or remote cache) that the content exists, without fetching it.

The `defer` behavior, on the other hand, will neither fetch nor validate the cache content before calling a cache hit a hit. This &quot;defers&quot; actually fetching the cache entry until Pants needs it (which may be never).

The `defer` mode is the most network efficient (because it will completely skip network requests in many cases), followed by the `validate` mode (since it can still skip fetching the content if no consumer ends up needing it). But both the `validate` and `defer` modes rely on an experimental feature called &quot;backtracking&quot; to attempt to recover if content later turns out to be missing (`validate` has a much narrower window for backtracking though, since content would need to disappear between validation and consumption: generally, within one `pantsd` session).

</Option>

### `ca_certs_path`

<Option
  cli_repr={`--ca-certs-path=<str>`}
  env_repr='PANTS_CA_CERTS_PATH'
  default_repr={`None`}
>
Path to a file containing PEM-format CA certificates used for verifying secure connections when downloading files required by a build.

Even when using the `docker_environment` and `remote_environment` targets, this path will be read from the local host, and those certs will be used in the environment.

This option cannot be overridden via environment targets, so if you need a different value than what the rest of your organization is using, override the value via an environment variable, CLI argument, or `.pants.rc` file. See https://www.pantsbuild.org/v2.15/docs/options.

</Option>

### `process_total_child_memory_usage`

<Option
  cli_repr={`--process-total-child-memory-usage=<memory_size>`}
  env_repr='PANTS_PROCESS_TOTAL_CHILD_MEMORY_USAGE'
  default_repr={`None`}
>
The maximum memory usage for all &quot;pooled&quot; child processes.

When set, this value participates in precomputing the pool size of child processes used by Pants (pooling is currently used only for the JVM). When not set, Pants will default to spawning `2 * --process-execution-local-parallelism` pooled processes.

A high value would result in a high number of child processes spawned, potentially overconsuming your resources and triggering the OS&#x27; OOM killer. A low value would mean a low number of child processes launched and therefore less parallelism for the tasks that need those processes.

If setting this value, consider also adjusting the value of the `--process-per-child-memory-usage` option.

You can suffix with `GiB`, `MiB`, `KiB`, or `B` to indicate the unit, e.g. `2GiB` or `2.12GiB`. A bare number will be in bytes.

</Option>

### `process_per_child_memory_usage`

<Option
  cli_repr={`--process-per-child-memory-usage=<memory_size>`}
  env_repr='PANTS_PROCESS_PER_CHILD_MEMORY_USAGE'
  default_repr={`512MiB`}
>
The default memory usage for a single &quot;pooled&quot; child process.

Check the documentation for the `--process-total-child-memory-usage` for advice on how to choose an appropriate value for this option.

You can suffix with `GiB`, `MiB`, `KiB`, or `B` to indicate the unit, e.g. `2GiB` or `2.12GiB`. A bare number will be in bytes.

</Option>

### `process_execution_local_parallelism`

<Option
  cli_repr={`--process-execution-local-parallelism=<int>`}
  env_repr='PANTS_PROCESS_EXECUTION_LOCAL_PARALLELISM'
  default_repr={`#cores`}
>
Number of concurrent processes that may be executed locally.

This value is independent of the number of threads that may be used to execute the logic in `@rules` (controlled by `--rule-threads-core`).

</Option>

### `process_execution_remote_parallelism`

<Option
  cli_repr={`--process-execution-remote-parallelism=<int>`}
  env_repr="PANTS_PROCESS_EXECUTION_REMOTE_PARALLELISM"
  default_repr={`128`}
>
  Number of concurrent processes that may be executed remotely.
</Option>

### `process_execution_cache_namespace`

<Option
  cli_repr={`--process-execution-cache-namespace=<str>`}
  env_repr="PANTS_PROCESS_EXECUTION_CACHE_NAMESPACE"
  default_repr={`None`}
>
  The cache namespace for process execution. Change this value to invalidate
  every artifact&#x27;s execution, or to prevent process cache entries from
  being (re)used for different usecases or users.
</Option>

### `process_execution_local_enable_nailgun`

<Option
  cli_repr={`--[no-]process-execution-local-enable-nailgun`}
  env_repr="PANTS_PROCESS_EXECUTION_LOCAL_ENABLE_NAILGUN"
  default_repr={`True`}
>
  Whether or not to use nailgun to run JVM requests that are marked as
  supporting nailgun.
</Option>

### `process_execution_graceful_shutdown_timeout`

<Option
  cli_repr={`--process-execution-graceful-shutdown-timeout=<int>`}
  env_repr="PANTS_PROCESS_EXECUTION_GRACEFUL_SHUTDOWN_TIMEOUT"
  default_repr={`3`}
>
  The time in seconds to wait when gracefully shutting down an interactive
  process (such as one opened using
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 run`) before killing
  it.
</Option>

### `remote_instance_name`

<Option
  cli_repr={`--remote-instance-name=<str>`}
  env_repr='PANTS_REMOTE_INSTANCE_NAME'
  default_repr={`None`}
>
Name of the remote instance to use by remote caching and remote execution.

This is used by some remote servers for routing. Consult your remote server for whether this should be set.

You can also use `[GLOBAL].remote_auth_plugin` to provide a plugin to dynamically set this value.

</Option>

### `remote_ca_certs_path`

<Option
  cli_repr={`--remote-ca-certs-path=<str>`}
  env_repr='PANTS_REMOTE_CA_CERTS_PATH'
  default_repr={`None`}
>
Path to a PEM file containing CA certificates used for verifying secure connections to `[GLOBAL].remote_execution_address` and `[GLOBAL].remote_store_address`.

If unspecified, Pants will attempt to auto-discover root CA certificates when TLS is enabled with remote execution and caching.

</Option>

### `remote_oauth_bearer_token_path`

<Option
  cli_repr={`--remote-oauth-bearer-token-path=<str>`}
  env_repr='PANTS_REMOTE_OAUTH_BEARER_TOKEN_PATH'
  default_repr={`None`}
>
Path to a file containing an oauth token to use for gGRPC connections to `[GLOBAL].remote_execution_address` and `[GLOBAL].remote_store_address`.

If specified, Pants will add a header in the format `authorization: Bearer <token>`. You can also manually add this header via `[GLOBAL].remote_execution_headers` and `[GLOBAL].remote_store_headers`, or use `[GLOBAL].remote_auth_plugin` to provide a plugin to dynamically set the relevant headers. Otherwise, no authorization will be performed.

</Option>

### `remote_store_address`

<Option
  cli_repr={`--remote-store-address=<str>`}
  env_repr='PANTS_REMOTE_STORE_ADDRESS'
  default_repr={`None`}
>
The URI of a server used for the remote file store.

Format: `scheme://host:port`. The supported schemes are `grpc` and `grpcs`, i.e. gRPC with TLS enabled. If `grpc` is used, TLS will be disabled.

</Option>

### `remote_store_headers`

<Option
  cli_repr={`--remote-store-headers="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_REMOTE_STORE_HEADERS'
  default_repr={`{'user-agent': 'pants/<pants_version>'}`}
>
Headers to set on remote store requests.

Format: header=value. Pants may add additional headers.

See `[GLOBAL].remote_execution_headers` as well.

</Option>

### `remote_store_chunk_bytes`

<Option
  cli_repr={`--remote-store-chunk-bytes=<int>`}
  env_repr="PANTS_REMOTE_STORE_CHUNK_BYTES"
  default_repr={`1048576`}
>
  Size in bytes of chunks transferred to/from the remote file store.
</Option>

### `remote_store_chunk_upload_timeout_seconds`

<Option
  cli_repr={`--remote-store-chunk-upload-timeout-seconds=<int>`}
  env_repr="PANTS_REMOTE_STORE_CHUNK_UPLOAD_TIMEOUT_SECONDS"
  default_repr={`60`}
>
  Timeout (in seconds) for uploads of individual chunks to the remote file
  store.
</Option>

### `remote_store_rpc_retries`

<Option
  cli_repr={`--remote-store-rpc-retries=<int>`}
  env_repr="PANTS_REMOTE_STORE_RPC_RETRIES"
  default_repr={`2`}
>
  Number of times to retry any RPC to the remote store before giving up.
</Option>

### `remote_store_rpc_concurrency`

<Option
  cli_repr={`--remote-store-rpc-concurrency=<int>`}
  env_repr="PANTS_REMOTE_STORE_RPC_CONCURRENCY"
  default_repr={`128`}
>
  The number of concurrent requests allowed to the remote store service.
</Option>

### `remote_store_batch_api_size_limit`

<Option
  cli_repr={`--remote-store-batch-api-size-limit=<int>`}
  env_repr="PANTS_REMOTE_STORE_BATCH_API_SIZE_LIMIT"
  default_repr={`4194304`}
>
  The maximum total size of blobs allowed to be sent in a single batch API call
  to the remote store.
</Option>

### `remote_cache_warnings`

<Option
  cli_repr={`--remote-cache-warnings=<RemoteCacheWarningsBehavior>`}
  env_repr='PANTS_REMOTE_CACHE_WARNINGS'
  one_of='ignore, first_only, backoff'
  default_repr={`backoff`}
>
How frequently to log remote cache failures at the `warn` log level.

All errors not logged at the `warn` level will instead be logged at the `debug` level.

</Option>

### `remote_cache_rpc_concurrency`

<Option
  cli_repr={`--remote-cache-rpc-concurrency=<int>`}
  env_repr="PANTS_REMOTE_CACHE_RPC_CONCURRENCY"
  default_repr={`128`}
>
  The number of concurrent requests allowed to the remote cache service.
</Option>

### `remote_cache_read_timeout_millis`

<Option
  cli_repr={`--remote-cache-read-timeout-millis=<int>`}
  env_repr="PANTS_REMOTE_CACHE_READ_TIMEOUT_MILLIS"
  default_repr={`1500`}
>
  Timeout value for remote cache lookups in milliseconds.
</Option>

### `remote_execution_address`

<Option
  cli_repr={`--remote-execution-address=<str>`}
  env_repr='PANTS_REMOTE_EXECUTION_ADDRESS'
  default_repr={`None`}
>
The URI of a server used as a remote execution scheduler.

Format: `scheme://host:port`. The supported schemes are `grpc` and `grpcs`, i.e. gRPC with TLS enabled. If `grpc` is used, TLS will be disabled.

You must also set `[GLOBAL].remote_store_address`, which will often be the same value.

</Option>

### `remote_execution_headers`

<Option
  cli_repr={`--remote-execution-headers="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_REMOTE_EXECUTION_HEADERS'
  default_repr={`{'user-agent': 'pants/<pants_version>'}`}
>
Headers to set on remote execution requests. Format: header=value. Pants may add additional headers.

See `[GLOBAL].remote_store_headers` as well.

</Option>

### `remote_execution_overall_deadline_secs`

<Option
  cli_repr={`--remote-execution-overall-deadline-secs=<int>`}
  env_repr="PANTS_REMOTE_EXECUTION_OVERALL_DEADLINE_SECS"
  default_repr={`3600`}
>
  Overall timeout in seconds for each remote execution request from time of
  submission
</Option>

### `remote_execution_rpc_concurrency`

<Option
  cli_repr={`--remote-execution-rpc-concurrency=<int>`}
  env_repr="PANTS_REMOTE_EXECUTION_RPC_CONCURRENCY"
  default_repr={`128`}
>
  The number of concurrent requests allowed to the remote execution service.
</Option>

### `remote_execution_append_only_caches_base_path`

<Option
  cli_repr={`--remote-execution-append-only-caches-base-path=<str>`}
  env_repr="PANTS_REMOTE_EXECUTION_APPEND_ONLY_CACHES_BASE_PATH"
  default_repr={`None`}
>
  Sets the base path to use when setting up an append-only cache for a process
  running remotely. If this option is not set, then append-only caches will not
  be used with remote execution. The option should be set to the absolute path
  of a writable directory in the remote execution environment where Pants can
  create append-only caches for use with remotely executing processes.
</Option>

### `watch_filesystem`

<Option
  cli_repr={`--[no-]watch-filesystem`}
  env_repr="PANTS_WATCH_FILESYSTEM"
  default_repr={`True`}
>
  Set to False if Pants should not watch the filesystem for changes. `pantsd` or
  `loop` may not be enabled.
</Option>

### `unmatched_build_file_globs`

<Option
  cli_repr={`--unmatched-build-file-globs=<GlobMatchErrorBehavior>`}
  env_repr='PANTS_UNMATCHED_BUILD_FILE_GLOBS'
  one_of='ignore, warn, error'
  default_repr={`warn`}
>
What to do when files and globs specified in BUILD files, such as in the `sources` field, cannot be found.

This usually happens when the files do not exist on your machine. It can also happen if they are ignored by the `[GLOBAL].pants_ignore` option, which causes the files to be invisible to Pants.

</Option>

### `unmatched_cli_globs`

<Option
  cli_repr={`--unmatched-cli-globs=<GlobMatchErrorBehavior>`}
  env_repr='PANTS_UNMATCHED_CLI_GLOBS'
  one_of='ignore, warn, error'
  default_repr={`error`}
>
What to do when command line arguments, e.g. files and globs like `dir::`, cannot be found.

This usually happens when the files do not exist on your machine. It can also happen if they are ignored by the `[GLOBAL].pants_ignore` option, which causes the files to be invisible to Pants.

</Option>

### `build_patterns`

<Option
  cli_repr={`--build-patterns="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BUILD_PATTERNS'
  default_repr={`[\n  "BUILD",\n  "BUILD.*"\n]`}
>
The naming scheme for BUILD files, i.e. where you define targets.

This only sets the naming scheme, not the directory paths to look for. To add ignore patterns, use the option `[GLOBAL].build_ignore`.

You may also need to update the option `[tailor].build_file_name` so that it is compatible with this option.

</Option>

### `build_ignore`

<Option
  cli_repr={`--build-ignore="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BUILD_IGNORE'
  default_repr={`[]`}
>
Path globs or literals to ignore when identifying BUILD files.

This does not affect any other filesystem operations; use `--pants-ignore` for that instead.

</Option>

### `build_file_prelude_globs`

<Option
  cli_repr={`--build-file-prelude-globs="['<str>', '<str>', ...]"`}
  env_repr="PANTS_BUILD_FILE_PRELUDE_GLOBS"
  default_repr={`[]`}
>
  Python files to evaluate and whose symbols should be exposed to all BUILD
  files. See https://www.pantsbuild.org/v2.15/docs/macros.
</Option>

### `subproject_roots`

<Option
  cli_repr={`--subproject-roots="['<str>', '<str>', ...]"`}
  env_repr="PANTS_SUBPROJECT_ROOTS"
  default_repr={`[]`}
>
  Paths that correspond with build roots for any subproject that this project
  depends on.
</Option>

### `loop_max`

<Option
  cli_repr={`--loop-max=<int>`}
  env_repr="PANTS_LOOP_MAX"
  default_repr={`4294967296`}
>
  The maximum number of times to loop when `--loop` is specified.
</Option>

### `streaming_workunits_report_interval`

<Option
  cli_repr={`--streaming-workunits-report-interval=<float>`}
  env_repr="PANTS_STREAMING_WORKUNITS_REPORT_INTERVAL"
  default_repr={`1.0`}
>
  Interval in seconds between when streaming workunit event receivers will be
  polled.
</Option>

### `streaming_workunits_level`

<Option
  cli_repr={`--streaming-workunits-level=<LogLevel>`}
  env_repr='PANTS_STREAMING_WORKUNITS_LEVEL'
  one_of='trace, debug, info, warn, error'
  default_repr={`debug`}
>
The level of workunits that will be reported to streaming workunit event receivers.

Workunits form a tree, and even when workunits are filtered out by this setting, the workunit tree structure will be preserved (by adjusting the parent pointers of the remaining workunits).

</Option>

### `streaming_workunits_complete_async`

<Option
  cli_repr={`--[no-]streaming-workunits-complete-async`}
  env_repr="PANTS_STREAMING_WORKUNITS_COMPLETE_ASYNC"
  default_repr={`True`}
>
  True if stats recording should be allowed to complete asynchronously when
  `pantsd` is enabled. When `pantsd` is disabled, stats recording is always
  synchronous. To reduce data loss, this flag defaults to false inside of
  containers, such as when run with Docker.
</Option>

### `docker_execution`

<Option
  cli_repr={`--[no-]docker-execution`}
  env_repr='PANTS_DOCKER_EXECUTION'
  default_repr={`True`}
>
If true, `docker_environment` targets can be used to run builds inside a Docker container.

If false, anytime a `docker_environment` target is used, Pants will instead fallback to whatever the target&#x27;s `fallback_environment` field is set to.

This can be useful, for example, if you want to always use Docker locally, but disable it in CI, or vice versa.

</Option>

### `remote_execution_extra_platform_properties`

<Option
  cli_repr={`--remote-execution-extra-platform-properties="['<str>', '<str>', ...]"`}
  env_repr='PANTS_REMOTE_EXECUTION_EXTRA_PLATFORM_PROPERTIES'
  default_repr={`[]`}
>
Platform properties to set on remote execution requests.

Format: property=value. Multiple values should be specified as multiple occurrences of this flag.

Pants itself may add additional platform properties.

If you are using the remote_environment target mechanism, set this value as a field on the target instead. This option will be ignored.

</Option>

## Deprecated options

### `process_cleanup`

<Option
  cli_repr={`--[no-]process-cleanup`}
  env_repr="PANTS_PROCESS_CLEANUP"
  default_repr={`True`}
  removal_version="3.0.0.dev0"
  removal_hint={"Use the `keep_sandboxes` option instead."}
>
  If false, Pants will not clean up local directories used as chroots for
  running processes. Pants will log their location so that you can inspect the
  chroot, and run the `__run.sh` script to recreate the process using the same
  argv and environment variables used by Pants. This option is useful for
  debugging.
</Option>

### `remote_auth_plugin`

<Option
  cli_repr={`--remote-auth-plugin=<str>`}
  env_repr='PANTS_REMOTE_AUTH_PLUGIN'
  default_repr={`None`}
  removal_version='2.16.0.dev1'
  removal_hint={'Remote auth plugins should now provide the function by implementing an entry point called remote_auth.<br /><br />If you are developing a plugin, switch to using an entry point.<br /><br />If you are only consuming a plugin from someone else, you can delete the remote_auth_plugin option and now only need the plugin to be included in [GLOBAL].plugins'}
>
Path to a plugin to dynamically configure remote caching and execution options.

Format: `path.to.module:my_func`. Pants will import your module and run your function. Update the `--pythonpath` option to ensure your file is loadable.

The function should take the kwargs `initial_store_headers: dict[str, str]`, `initial_execution_headers: dict[str, str]`, `options: Options` (from pants.option.options), `env: dict[str, str]`, and `prior_result: AuthPluginResult | None`. It should return an instance of `AuthPluginResult` from `pants.option.global_options`.

Pants will replace the headers it would normally use with whatever your plugin returns; usually, you should include the `initial_store_headers` and `initial_execution_headers` in your result so that options like `[GLOBAL].remote_store_headers` still work.

If you return `instance_name`, Pants will replace `[GLOBAL].remote_instance_name` with this value.

If the returned auth state is `AuthPluginState.UNAVAILABLE`, Pants will disable remote caching and execution.

If Pantsd is in use, `prior_result` will be the previous `AuthPluginResult` returned by your plugin, which allows you to reuse the result. Otherwise, if Pantsd has been restarted or is not used, the `prior_result` will be `None`.

</Option>

</span>

